[package]
name = "conquer-once"
description = "synchronization primitives for lazy and one-time initialization"
version = "0.1.2"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-once.git"
documentation = "https://docs.rs/conquer-once"
keywords = ["lazy", "once", "synchronization", "initialization"]
categories = ["concurrency", "no-std"]
edition = "2018"
exclude = [".travis.yml"]

[features]
default = ["std"]
std = []

[dependencies.conquer-util]
version = "0.2.0"
no-default-features = true
features = ["back-off"]
