[package]
name = "conquer-once"
description = "Synchronization primitives for lazy and one-time initialization"
version = "0.4.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-once.git"
documentation = "https://docs.rs/conquer-once"
keywords = ["lazy", "one-time", "initialization", "no-std", "multi-threading"]
categories = ["concurrency", "no-std", "memory-management"]
edition = "2018"
exclude = [".github"]

[features]
default = ["std"]
std = []

[dependencies.conquer-util]
version = "0.3.0"
default-features = false
features = ["back-off"]
